# msig

./: .gitignore  CLAUDE.md  INSTALLATION.md  PYPI_DESCRIPTION.md  README.md  README.rst  TESTING_SUMMARY.md  environment.yml  pyproject.toml  requirements.txt  run_all_tests.py  run_experiments.py  run_priority1_validation.py  setup.py  test_audio_experiment.py  test_setup.sh  test_simple_stumpy_experiment.py  validate_all_datasets.py  validate_environment.py  validate_reproducibility.py
examples/: example.ipynb  simple_example.py
experiments/: common_utils.py
experiments/audio/: lama.py  run_lama.py  run_momenti.py  run_stumpy.py  stumpy.py
experiments/populationdensity/: lama.py  run_lama.py  run_momenti.py  run_stumpy.py  stumpy.py
experiments/washingmachine/: run_lama.py  run_momenti.py  run_stumpy.py  stumpy.py
msig/: MSig.py  __init__.py  casestudy_populationdensity.ipynb  casestudy_synthetic.ipynb  casestudy_washingmachine.ipynb  example.ipynb
results/: table_motifs_min_neighbors=1_max_distance=None_cutoffs=inf_max_matches=100_max_motifs=99999_k_unified=None_unified_weights=0.33,0.33,0.33.csv
results/audio/: table_motifs_min_neighbors=1_max_distance=None_cutoffs=inf_max_matches=100_max_motifs=99999_k_unified=None_unified_weights=0.33,0.33,0.33.csv  table_motifs_min_neighbors=1_max_distance=[1.3747727084867518, 1.9672315572906, 3.4205262752974135, 4.41927595879687]_cutoffs=inf_max_matches=99999_max_motifs=99999.csv  table_motifs_min_neighbors=1_max_distance=[1.9672315572906, 3.4205262752974135, 4.41927595879687, 6.249799996799898]_cutoffs=inf_max_matches=99999_max_motifs=99999.csv  table_motifs_min_neighbors=1_max_distance=[3.4205262752974135]_cutoffs=inf_max_matches=99999_max_motifs=99999.csv  table_motifs_min_neighbors=1_max_distance=[4.41927595879687]_cutoffs=inf_max_matches=99999_max_motifs=99999.csv
results/audio/lama_iterative/: summary_motifs_lama_iterative.csv
results/audio/momenti/: summary_motifs_momenti.csv
results/audio/mp/: mp_normalized=True_include=None_m=130.npy  mp_normalized=True_include=None_m=21.npy  mp_normalized=True_include=None_m=217.npy  mp_normalized=True_include=None_m=43.npy  mp_normalized=True_include=None_m=86.npy
results/audio/mp_indices/: mp_indices_normalized=True_include=None_m=21.npy  mp_indices_normalized=True_include=None_m=43.npy  (+1 more)
results/experiment_runs/: run_20251224_153521.json
results/mp/: mp_normalized=True_include=None_m=173.npy
results/mp_indices/: mp_indices_normalized=True_include=None_m=130.npy  mp_indices_normalized=True_include=None_m=173.npy  mp_indices_normalized=True_include=None_m=217.npy
results/populationdensity/: table_motifs_min_neighbors=1_max_distance=None_cutoffs=inf_max_matches=99999_max_motifs=99999.csv  table_motifs_min_neighbors=1_max_distance=[0.7348469228349533, 1.0392304845413263, 1.4696938456699067, 2.0784609690826525]_cutoffs=inf_max_matches=99999_max_motifs=99999.csv
results/washingmachine/: table_motifs_min_neighbors=1_max_distance=None_cutoffs=inf_max_matches=99999_max_motifs=99999.csv  table_motifs_min_neighbors=1_max_distance=[2.32379000772445, 5.196152422706632, 7.348469228349534, 10.392304845413264]_cutoffs=inf_max_matches=99999_max_motifs=99999.csv
scripts/: compare_results.py
src/: MSig.py  MotifSig.py  casestudy_audio.ipynb  casestudy_populationdensity.ipynb  casestudy_synthetic.ipynb  casestudy_washingmachine.ipynb
tests/: test_basic.py  test_statistical_methods.py
(+11 files in other folders)
