[project]
name = "msig"
version = "0.1.3"
description = "Statistical Significance Criteria for Multivariate Time Series Motifs"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Miguel G. Silva", email = "mmsilva@ciencias.ulisboa.pt" },
]
maintainers = [
    { name = "Miguel G. Silva", email = "mmsilva@ciencias.ulisboa.pt" },
]
keywords = [
    "time-series",
    "motif-discovery",
    "statistical-significance",
    "multivariate",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
# Dependencies for running experiments
experiments = [
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "stumpy>=1.11.0",
    "librosa>=0.9.0",
    "statsmodels>=0.13.0",
    "jinja2>=3.0.0",
    "leitmotif",  # LAMA motif discovery
    "psutil>=5.8.0",  # Required by leitmotif
    # MOMENTI must be installed separately: pip install git+https://github.com/aidaLabDEI/MOMENTI-motifs
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

# Complete installation (experiments + dev)
all = [
    "msig[experiments,dev]",
]

[project.urls]
Homepage = "https://github.com/MiguelGarcaoSilva/msig"
Repository = "https://github.com/MiguelGarcaoSilva/msig"
Documentation = "https://github.com/MiguelGarcaoSilva/msig#readme"
"Bug Tracker" = "https://github.com/MiguelGarcaoSilva/msig/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["msig"]

[tool.setuptools.package-data]
msig = ["py.typed"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | leitmotifs
  | MOMENTI-motifs
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
extend_skip_glob = ["leitmotifs/*", "MOMENTI-motifs/*"]

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "stumpy.*",
    "librosa.*",
    "statsmodels.*",
]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["msig"]
omit = [
    "*/tests/*",
    "*/casestudy_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
